# CATViz

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: barymap.cpp  driver.cpp  main.cpp  shader.cpp  svg_gen.hpp  triangle.c  triangle.h  util.cpp
